--- a/site/Getstart_here.html
+++ b/site/Getstart_here.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Peeranat Portfolio</title>
+  <title> Peeranat Portfolio</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
@@ -52,8 +52,10 @@
   <section id="education">
     <h2>My Education</h2>
     <h3>Currently studying at Rajamangala University of Technology North Phra Nakhon.</h3>
-    <h3>I Have a Certificate for my good manners and learning with interest motivation for 3 years.</h3>
-    <img src="" alt="Certificate" id="Peeranat_Cer" width="695" height="391">
+    <h3>I get Certificate for my good manners and learning with interest motivation for 3 years.</h3>
+    <img src="1699880186293 (1).jpg" alt="Certificate" id="Peeranat_Cer" width="695" height="391">
+    <img src="IMG_0772.jpg" alt="Certificate" id="Peeranat_Cer" width="695" height="391">
+    <img src="IMG_0771.jpg" alt="Certificate" id="Peeranat_Cer" width="695" height="391">
   </section>
 
   <section id="contacts">
@@ -67,7 +69,7 @@
   <script src="app.js"></script>
 
   <footer>
-    <p>&copy; 2023 YOSOBI. All rights reserved.</p>
+    <p>Thank for see my page</p>
   </footer>
 </body>
 </html>
